--- a/packages/khalti_flutter/pubspec.yaml
+++ b/packages/khalti_flutter/pubspec.yaml
@@ -7,8 +7,8 @@ issue_tracker: https://github.com/khalti/khalti-flutter-sdk/issues
 repository: https://github.com/khalti/khalti-flutter-sdk/tree/master/packages/khalti_flutter
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
-  flutter: '>=3.0.0'
+  sdk: ">=2.18.2 <3.0.0"
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
@@ -19,6 +19,7 @@ dependencies:
     git:
       url: https://github.com/sasen98/khalti-flutter-sdk
       path: packages/khalti
+      ref: enhc/version-down
   url_launcher: ^6.1.11
 
 dev_dependencies:
