--- a/packages/khalti/pubspec.yaml
+++ b/packages/khalti/pubspec.yaml
@@ -9,7 +9,7 @@ issue_tracker: https://github.com/khalti/khalti-flutter-sdk/issues
 repository: https://github.com/khalti/khalti-flutter-sdk/tree/master/packages/khalti
 
 environment:
-  sdk: ">=2.18.2 <3.0.0"
+  sdk: ">=2.18.2 <4.0.0"
 
 dependencies:
   device_info_plus: ^9.1.1
@@ -20,7 +20,7 @@ dependencies:
     git:
       url: https://github.com/sasen98/khalti-flutter-sdk
       path: packages/khalti_core
-
+      ref: enhc/version-upgrade-nov-2023
   package_info_plus: ^5.0.1
 
 dev_dependencies:
